# tensorrtx

vision_transformer/image_classification/: CMakeLists.txt  gen_wts.py
